@@ -16,7 +16,8 @@ require_once __DIR__ . '/includes/Constants.php';
 require_once __DIR__ . '/includes/Api.php';
 require_once __DIR__ . '/includes/EventsCache.php';
 require_once __DIR__ . '/includes/Settings.php';
-require_once __DIR__ . '/includes/DateTimeWrapper.php';
+require_once __DIR__ . '/includes/SiteSettings.php';
+require_once __DIR__ . '/includes/LocalDateTime.php';
 require_once __DIR__ . '/includes/Formatter.php';
 require_once __DIR__ . '/includes/GraphQlClient.php';
 require_once __DIR__ . '/includes/EventsListBlock.php';
